Update path imgs

--- a/index.html
+++ b/index.html
@@ -57,17 +57,17 @@
                 <div class="member-sections row mb-22">
                     <div class="mobile-member-items col col-third text-center">
                         <div class="member-name">Name</div>
-                        <img src="/assets/img/bandmember.jpg" alt="Name" class="member-img fs-15 mt-15">
+                        <img src="./assets/img/bandmember.jpg" alt="Name" class="member-img fs-15 mt-15">
                     </div>
     
                     <div class="mobile-member-items col col-third text-center">
                         <div class="member-name">Name</div>
-                        <img src="/assets/img/bandmember.jpg" alt="Name" class="member-img fs-15 mt-15">
+                        <img src="./assets/img/bandmember.jpg" alt="Name" class="member-img fs-15 mt-15">
                     </div>
     
                     <div class="mobile-member-items col col-third text-center">
                         <div class="member-name">Name</div>
-                        <img src="/assets/img/bandmember.jpg" alt="Name" class="member-img fs-15 mt-15">
+                        <img src="./assets/img/bandmember.jpg" alt="Name" class="member-img fs-15 mt-15">
                     </div>
                 </div>
             </div>
@@ -88,7 +88,7 @@
 
                             <div class="place-lists fs-15 row">
                                 <div class="s-col-full mt-16 col col-third">
-                                    <img src="/assets/img/newyork.jpg" alt="New York" class="place-img">
+                                    <img src="./assets/img/newyork.jpg" alt="New York" class="place-img">
                                     <div class="place-body">
                                         <h3 class="place-heading">New York</h3>
                                         <p class="place-time mt-15">Fri 27 Nov 2016</p>
@@ -98,7 +98,7 @@
                                 </div>
 
                                 <div class="s-col-full mt-16 col col-third">
-                                    <img src="/assets/img/paris.jpg" alt="Paris" class="place-img">
+                                    <img src="./assets/img/paris.jpg" alt="Paris" class="place-img">
                                     <div class="place-body">
                                         <h3 class="place-heading">Paris</h3>
                                         <p class="place-time mt-15">Sat 28 Nov 2016</p>
@@ -108,7 +108,7 @@
                                 </div>
 
                                 <div class="s-col-full mt-16 col col-third">
-                                    <img src="/assets/img/sanfran.jpg" alt="San Francisco" class="place-img">
+                                    <img src="./assets/img/sanfran.jpg" alt="San Francisco" class="place-img">
                                     <div class="place-body">
                                         <h3 class="place-heading">San Francisco</h3>
                                         <p class="place-time mt-15">Sun 29 Nov 2016</p>
